--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,12 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+
+ext {
+    c3mediaVersion = "-SNAPSHOT"
+    glideVersion = "3.8.0"
+    supportLibVersion = "26.0.0-beta2"
+}
 
 android {
     compileSdkVersion 26
@@ -12,7 +16,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
     }
     buildTypes {
         release {
@@ -25,7 +29,9 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:leanback-v17:26.0.0-beta2'
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation "com.android.support:leanback-v17:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation "com.github.bumptech.glide:glide:${glideVersion}"
+
+    implementation "com.github.johnjohndoe:c3media-base:${c3mediaVersion}"
 }
