--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,14 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 ext {
-    c3mediaVersion = "-SNAPSHOT"
+    assertjVersion = "3.8.0"
     glideVersion = "3.8.0"
+    junitVersion = "4.12"
+    moshiVersion = "1.4.0"
+    okhttpVersion = "3.8.1"
+    retrofitVersion = "2.3.0"
     supportLibVersion = "26.0.0-beta2"
+    threetenbpVersion = "1.3.5"
 }
 
 android {
@@ -29,9 +34,17 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:leanback-v17:${supportLibVersion}"
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
-    implementation "com.github.bumptech.glide:glide:${glideVersion}"
+    implementation "com.android.support:leanback-v17:$supportLibVersion"
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
 
-    implementation "com.github.johnjohndoe:c3media-base:${c3mediaVersion}"
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
+    implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+    implementation "com.squareup.moshi:moshi:$moshiVersion"
+    implementation "org.threeten:threetenbp:$threetenbpVersion"
+
+    testCompile "junit:junit:$junitVersion"
+    testCompile "org.assertj:assertj-core:$assertjVersion"
 }
