--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,9 @@ ext {
     moshiVersion = "1.4.0"
     okhttpVersion = "3.8.1"
     retrofitVersion = "2.3.0"
+    rxAndroidVersion = "2.0.1"
+    rxJavaVersion = "2.1.1"
+    rxKotlinVersion = "2.1.0"
     supportLibVersion = "26.0.0-beta2"
     threetenbpVersion = "1.3.5"
 }
@@ -37,13 +40,16 @@ dependencies {
     implementation "com.android.support:leanback-v17:$supportLibVersion"
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
-
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
     implementation "com.squareup.moshi:moshi:$moshiVersion"
     implementation "org.threeten:threetenbp:$threetenbpVersion"
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
     testCompile "junit:junit:$junitVersion"
     testCompile "org.assertj:assertj-core:$assertjVersion"
