--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 ext {
     assertjVersion = "3.8.0"
+    exoplayerVersion = "r2.2.0"
     glideVersion = "3.8.0"
     junitVersion = "4.12"
     moshiVersion = "1.4.0"
@@ -41,6 +42,7 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:leanback-v17:$supportLibVersion"
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
