--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.github.ben-manes.versions'
 
 ext {
     assertjVersion = "3.8.0"
     daggerVersion = "2.11"
-    exoplayerVersion = "r2.2.0"
+    exoplayerVersion = "r2.5.1"
     glideVersion = "3.8.0"
     junitVersion = "4.12"
     paperParcelVersion = "2.0.2"
     rxAndroidVersion = "2.0.1"
     rxJavaVersion = "2.1.1"
     rxKotlinVersion = "2.1.0"
-    supportLibVersion = "26.0.0"
+    supportLibVersion = "26.0.1"
     threetenbpVersion = "1.3.5"
 }
 
@@ -38,27 +39,38 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:leanback-v17:$supportLibVersion"
-    implementation "com.android.support:appcompat-v7:$supportLibVersion"
-    implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
-    implementation "com.github.bumptech.glide:glide:$glideVersion"
-    implementation "org.threeten:threetenbp:$threetenbpVersion"
-//    TODO PR to Tobis Repo + replace by original release version
-    implementation "com.github.stefanmedack:c3media-base:c9a508e640"
-    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
-    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
-    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation "nz.bradcampbell:paperparcel:$paperParcelVersion"
-    implementation "nz.bradcampbell:paperparcel-kotlin:$paperParcelVersion" // Optional
-    kapt "nz.bradcampbell:paperparcel-compiler:$paperParcelVersion"
+    // Support Libs
+    implementation "com.android.support:appcompat-v7:$supportLibVersion"
+    implementation "com.android.support:leanback-v17:$supportLibVersion"
 
     //Dagger 2 dependencies
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
+    // c3media API - TODO PR to Tobis Repo + replace by original release version
+    implementation "com.github.stefanmedack:c3media-base:c9a508e640"
+
+    // Exo Player
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+
+//    implementation "org.threeten:threetenbp:$threetenbpVersion"
+
+    // RXJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+
+    // Paper Parcel
+    implementation "nz.bradcampbell:paperparcel:$paperParcelVersion"
+    implementation "nz.bradcampbell:paperparcel-kotlin:$paperParcelVersion" // Optional
+    kapt "nz.bradcampbell:paperparcel-compiler:$paperParcelVersion"
+
+    // Test dependencies
     testCompile "junit:junit:$junitVersion"
     testCompile "org.assertj:assertj-core:$assertjVersion"
 }
