adds initial version for merged detail and video playback Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.details.DetailsActivity"/>
+        <activity android:name=".ui.details.DetailActivityWithVideoPlayback"/>
         <activity android:name=".ui.BrowseErrorActivity"/>
         <activity
             android:name=".ui.playback.ExoPlayerActivity"
