--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
     <application
         android:name=".C3TVApp"
         android:allowBackup="true"
-        android:banner="@drawable/app_banner"
+        android:banner="@drawable/voctocat"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:logo="@mipmap/ic_launcher"
@@ -27,9 +27,7 @@
         >
         <activity
             android:name=".ui.main.MainActivity"
-            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:logo="@mipmap/ic_launcher"
             android:screenOrientation="landscape"
             >
             <intent-filter>
