--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="de.stefanmedack.ccctv"
-          xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    package="de.stefanmedack.ccctv"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <!--<uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
 
     <uses-feature
         android:name="android.hardware.touchscreen"
