--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:name="android.hardware.touchscreen"
         android:required="false"
         />
+
     <uses-feature
         android:name="android.software.leanback"
         android:required="true"
@@ -24,8 +25,9 @@
         android:label="@string/app_name"
         android:logo="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/CCCTheme.Leanback"
         >
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -37,6 +39,7 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".ui.detail.DetailActivity"/>
 
     </application>
