--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# Play Services Third Party Licenses
+third_party_license_metadata
+third_party_licenses
