--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.0.0-beta4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.15.0"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.google.gms:oss-licenses:0.9.0'
     }
 }
 
