--- a/build.gradle
+++ b/build.gradle
@@ -5,12 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-beta4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.ben-manes:gradle-versions-plugin:0.15.0"
         classpath 'com.google.gms:oss-licenses:0.9.0'
+        classpath 'io.fabric.tools:gradle:1.23.0'
     }
 }
 
@@ -20,6 +22,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
