--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0.0"
+        resConfigs "en", "de"
     }
     buildTypes {
         debug {
