--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,22 +9,23 @@ apply plugin: 'io.fabric'
 apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 ext {
-    archComponentsVersion = "1.0.0-alpha9"
+    archComponentsVersion = "1.0.0-beta1"
     assertjVersion = "3.8.0"
+    c3mediaVersion = "2.0.0-SNAPSHOT"
     crashlyticsVersion = "2.6.8"
     daggerVersion = "2.11"
-    exoplayerVersion = "r2.5.1"
+    exoplayerVersion = "r2.5.3"
     glideVersion = "3.8.0"
     paperParcelVersion = "2.0.4"
-    playServicesVersion = "11.2.2"
+    playServicesVersion = "11.4.0"
     rxAndroidVersion = "2.0.1"
-    rxJavaVersion = "2.1.3"
+    rxJavaVersion = "2.1.4"
     rxKotlinVersion = "2.1.0"
-    supportLibVersion = "26.0.2"
+    supportLibVersion = "26.1.0"
     timberVersion = "4.5.1"
 
     // Test dependencies
-    kluentVersion = "1.26"
+    kluentVersion = "1.29"
     junitVersion = "4.12"
 }
 
@@ -90,8 +91,7 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
-    // c3media API - TODO PR to Tobis Repo + replace by original release version
-    implementation "com.github.stefanmedack:c3media-base:c9a508e640"
+    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:${c3mediaVersion}"
 
     // Exo Player
     implementation "com.google.android.exoplayer:exoplayer:$exoplayerVersion"
