adds all screens for search - needs to be hooked up to actual search logic

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         </activity>
 
         <activity android:name=".ui.detail.DetailActivity"/>
+        <activity android:name=".ui.search.SearchActivity"/>
 
         <activity
             android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
