--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ ext {
     paperParcelVersion = "2.0.4"
     playServicesVersion = "11.4.0"
     rxAndroidVersion = "2.0.1"
+    rxBindingVersion = "2.0.0"
     rxJavaVersion = "2.1.4"
     rxKotlinVersion = "2.1.0"
     supportLibVersion = "26.1.0"
@@ -103,6 +104,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
     implementation "io.reactivex.rxjava2:rxkotlin:$rxKotlinVersion"
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
+
+    // RXBinding
+    compile "com.jakewharton.rxbinding2:rxbinding-leanback-v17-kotlin:$rxBindingVersion"
 
     // timber - better logging
     implementation "com.jakewharton.timber:timber:$timberVersion"
