--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 4
-        versionName "2.0.0-RC"
+        versionName "2.0.0-RC1"
         resConfigs "en", "de"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
