changes build script to use fork of c3media-base which temporarily removes parsing of related events in Metadata

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,7 +123,9 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // c3media library
-    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:${c3mediaVersion}"
+    implementation "com.github.stefanmedack:c3media-base:tmp_remove_related_list-SNAPSHOT"
+    // TODO change c3media-base to latest release, when it is stable again
+//    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:$c3mediaVersion"
     // c3media streaming
     implementation "com.github.johnjohndoe:Brockman:1886e90a92029ceba978e3326202383c63ed8efd"
 
