--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,16 +75,15 @@ android {
         }
     }
 
-    // TODO think about reworking the dimensions/configs for streaming
-    flavorDimensions "default"
+    flavorDimensions "streaming"
     productFlavors {
-        dev {
+        devStreaming {
             buildConfigField "String", "STREAMING_API_BASE_URL", "\"http://gist.githubusercontent.com\""
             buildConfigField "String", "STREAMING_API_OFFERS_PATH",
                     "\"/MaZderMind/a91f242efb2f446a2237d4596896efd6/raw/7ab4e206f19ed4d63a67917fe6e3a15a96218ac9/streams-v2.json\""
 //                    "\"/johnjohndoe/617bbfa2ac36f5148a049548b419e299/raw/7ab4e206f19ed4d63a67917fe6e3a15a96218ac9/streams-v2.json\""
         }
-        live {
+        liveStreaming {
             buildConfigField "String", "STREAMING_API_BASE_URL", "\"http://streaming.media.ccc.de\""
             buildConfigField "String", "STREAMING_API_OFFERS_PATH", "\"/streams/v2.json\""
         }
