improves sorting of conferences on the main screen - tries to put latest conferences in a group at the most prominent place

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,11 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     sourceSets {
         androidTest.java.srcDirs += "src/test-common/java"
         test.java.srcDirs += "src/test-common/java"
@@ -122,7 +127,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     // c3media library
-    implementation "com.github.stefanmedack:c3media-base:tmp_remove_related_list-SNAPSHOT"
+    implementation "com.github.stefanmedack:c3media-base:adds_eventLastReleasedAt-SNAPSHOT"
     // TODO change c3media-base to latest release, when it is stable again
 //    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:$c3mediaVersion"
     // c3media streaming
