--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:$rxAndroidVersion"
 
     // RXBinding
-    compile "com.jakewharton.rxbinding2:rxbinding-leanback-v17-kotlin:$rxBindingVersion"
+    implementation "com.jakewharton.rxbinding2:rxbinding-leanback-v17-kotlin:$rxBindingVersion"
 
     // timber - better logging
     implementation "com.jakewharton.timber:timber:$timberVersion"
