--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,9 @@ ext {
     timberVersion = "4.6.1"
 
     // Test dependencies
-    kluentVersion = "1.34"
     junitVersion = "4.12"
+    kluentVersion = "1.34"
+    mockitoVersion = "2.8.47"
     runnerVersion = '1.0.1'
     rulesVersion = '1.0.1'
 }
@@ -161,6 +162,8 @@ dependencies {
 
     // Test dependencies
     testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "org.mockito:mockito-inline:$mockitoVersion"
     testImplementation "org.amshove.kluent:kluent:$kluentVersion"
 
     // Android Instrumented Test
