adds initial version of the bookmark fragment showing all bookmarked events

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,12 @@ android {
         resConfigs "en", "de"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        kapt {
+            arguments {
+                arg("room.schemaLocation", "$projectDir/schemas".toString())
+            }
+        }
     }
 
     signingConfigs {
