--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--<uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
 
+    <!--Note: this permission is used to start the [ContentUpdateBroadcastReceiver] -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false"
@@ -105,6 +108,16 @@
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
             />
+
+        <receiver
+            android:name=".service.ContentUpdateBroadcastReceiver"
+            android:enabled="true"
+            android:exported="false"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="io.fabric.ApiKey"
