--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <!--<uses-permission android:name="android.permission.RECORD_AUDIO"/>-->
 
-    <!--Note: this permission is used to start the [BootUpBroadcastReceiver] to schedule content updates in the background -->
+    <!--Note: this permission is used to start the [C3BroadcastReceiver] to schedule content updates in the background -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <uses-feature
@@ -115,12 +115,13 @@
             />
 
         <receiver
-            android:name=".service.BootUpBroadcastReceiver"
+            android:name=".service.C3BroadcastReceiver"
             android:enabled="true"
             android:exported="false"
             >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
             </intent-filter>
         </receiver>
 
