--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,12 @@ apply plugin: 'com.google.gms.oss.licenses.plugin'
 
 ext {
     androidKtx = "0.3"
-    archComponentsVersion = "1.0.0"
-    archComponentsLifecycleVersion = "1.1.0"
+    archComponentsVersion = "1.1.1"
+    archComponentsLifecycleVersion = "1.1.1"
     assertjVersion = "3.8.0"
-    c3mediaVersion = "1.1.0"
+    c3mediaVersion = "2.0.0"
     crashlyticsVersion = "2.9.0"
-    daggerVersion = "2.14.1"
+    daggerVersion = "2.20"
     exoplayerVersion = "2.7.0"
     glideVersion = "4.6.1"
     gsonVersion = "2.8.2"
@@ -38,7 +38,7 @@ ext {
 android {
 
     compileSdkVersion 27
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "de.stefanmedack.ccctv"
         minSdkVersion 21
@@ -110,7 +110,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // Support Libs
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
@@ -136,9 +136,9 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
-    // c3media library TODO update import after release
-//    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:$c3mediaVersion"
-    implementation "com.github.stefanmedack.c3media-base:c3media-rx-java-2:api_update_beta1"
+    // c3media library
+    implementation "info.metadude.kotlin.library.c3media:c3media-rx-java-2:$c3mediaVersion"
+//    implementation "com.github.stefanmedack.c3media-base:c3media-rx-java-2:api_update_beta1"
     // c3media streaming
     implementation "com.github.johnjohndoe:Brockman:1886e90a92029ceba978e3326202383c63ed8efd"
 
